TEST_PROGRAMS/INVALID/15/id.go
package pk

var int = 90
